// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     expenses totalling 
    $33.33
  </h1>
</div>
`;

exports[`should render ExpensesSummary component correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     expenses totalling 
    $2.35
  </h1>
</div>
`;
